# xfce4-remotenotify-plugin

./: AUTHORS  NEWS  README  configure.ac  configure.ac.in
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  addhost.c  addhost.h  configure.c  configure.h  deletehost.c  deletehost.h  displayhosts.c  displayhosts.h  driver.c  driver.h  global.h  notification.c  notification.h  parse.c  parse.h  remote.h  remotenotify.desktop.in.in  ssh.c  ssh.h  xfce4-remotenotify-plugin.c  xfce4-remotenotify-plugin.h
panel-plugin/glade/: addhost.glade  config.glade  deletehost.glade
po/: POTFILES.in
